WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53233
[Qt][WK2] Lots of layout test failures due to wrong font type
https://bugs.webkit.org/show_bug.cgi?id=53233
Summary
[Qt][WK2] Lots of layout test failures due to wrong font type
Balazs Kelemen
Reported
2011-01-27 02:35:42 PST
A bunch of layout tests failing in WTR because the default font types are differ in WK2 from WK1 and DRT. The most frequent error is using Courier instead of Courier new as fixed font type. The default values are being set in WebPreferencesStore.h. We should specialize them for Qt.
Attachments
Patch
(1.93 KB, patch)
2011-01-27 04:11 PST
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-01-27 04:11:26 PST
Created
attachment 80317
[details]
Patch
Balazs Kelemen
Comment 2
2011-01-27 04:13:13 PST
The patch fixes 70 tests (tested on our wk2 bot:
http://webkit.sed.hu/buildbot/waterfall?show=x86-32%20Linux%20Qt%20Release%20WebKit2
)
Balazs Kelemen
Comment 3
2011-01-27 04:15:08 PST
(In reply to
comment #2
)
> The patch fixes 70 tests (tested on our wk2 bot: >
http://webkit.sed.hu/buildbot/waterfall?show=x86-32%20Linux%20Qt%20Release%20WebKit2
)
Ahm, this is not exactly true. The patch was tested on the same machine that runs this bot.
Andreas Kling
Comment 4
2011-01-27 04:30:31 PST
Comment on
attachment 80317
[details]
Patch Delightful! r=me
Balazs Kelemen
Comment 5
2011-01-27 06:56:24 PST
Comment on
attachment 80317
[details]
Patch Clearing flags on attachment: 80317 Committed
r76797
: <
http://trac.webkit.org/changeset/76797
>
Balazs Kelemen
Comment 6
2011-01-27 06:56:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug