2011-01-27  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Andreas Kling.

        [Qt][WK2] Lots of layout test failures due to wrong font type
        https://bugs.webkit.org/show_bug.cgi?id=53233

        * Shared/WebPreferencesStore.h:
        Specialize default font families for Qt.

Canonical link: https://commits.webkit.org/67015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76797 268f45cc-cd09-0410-ab3c-d52691b4dbfc